--- a/데이터베이스_추상화.md
+++ b/데이터베이스_추상화.md
@@ -1,1 +1,20 @@
 ## 데이터베이스 추상화
+=> 사용자는 DB 내부구조를 굳이 알 필요없고, 원하는 데이터만 빠르고 쉽게 가져오면됨.  
+하지만 DB관점에서는 어떻게 하면 안전하고 데이터를 오류없이 보관할 수 있을지에만 관심이 있음.  
+그래서 각각 관점에서 알지 않아도 되는 부분을 드러내지 않는데 이것을 추상화라고 한다.  
+  
+추상화를 구현한 대표적인 예는 '3단계 데이터베이스 구조' 가 있다.  
+데이터의 독립성을 확보하기 위해서 3단계로 구성.  
+그리고 각 단계에서 스키마를 정의 한다.  
+  
+* 외부 단계  
+  - 가장 추상화된 단계로 개별사용자 or 애플리케이션이 접근한다.  
+  - SQL을 통해 **외부스키마**를 구성.  
+  - 외부 스키마 아래 단계에 위치한 **개념스키마**로부터 생성되거나 사용할 수 있어, **서브스키마**라고도 불린다.  
+  
+* 개념 단계  
+  - **개념스키마**를 작성. **논리스키마**라고도 하는데, DB의 전체적인 논리적 구조를 기술한 것이다. (개념스키마 : 제약조건, 접근권한 등 정의 해놓은 것)
+  - 단순히 스키마라고 하면 보통 개념스키마를 의미한다.  
+  
+* 내부 단계  
+  - 데이터들이 실질적으로 어떻게 저장되어있는지 정보를 저장. -> **내부스키마**(물리스키마)
