--- a/데이터모델링.md
+++ b/데이터모델링.md
@@ -7,13 +7,28 @@
     - 논리적 데이터 모델 : 개념적 데이터 모델링 과정에서 얻어낸 구조를 컴퓨터가 이해할 수 있게 변환한 모델.  
     ex) 관계형데이터모델, 계층형 모델 등  
    
- * 구성요소  
+* 구성요소  
     - **Entity(개체)** : 데이터베이스에 표현하려는 것. 사람이 생각하는 개념이나 정보단위 같은 대상체.  
     - **Attribute(속성)** : 데이터의 가장 작은 논리적 단위. 파일 구조 상의 데이터 항목, 데이터 필드. 속성은 개체를 구성하는 항목이다.  
+   
+     
+     
+   예를 들면,  
+   Entity(개체) - 주택  
+   Attribute(속성) - Entity(개체)의 특성으로, 위에서 개체가 주택이니, 개체의 특성은 주소, 양식, 가격 등이 Attribute(속성) 값이 될 수있다.  
+   Value(값) - Attribute(속성)의 값으로, 주택 객체의 양식 값은 '아파트' 가 될 수 있다.  
+
+
+  <img width="606" alt="스크린샷 2019-03-21 오후 2 19 21" src="https://user-images.githubusercontent.com/21151247/54734733-054c6f00-4be5-11e9-9ba2-4bb6fa6d2d2c.png">
+
+
+   교수번호, 성명, 전공, 소속은 각각 교수 Entity(개체)의 Attribute(속성)이다.  
+   (교수번호, 성명, 전공, 소속) 이 묶음은 개체타입이다.  
+   (1,김윤겸,컴퓨터,숭실대) 는 개체인스턴스 이다. 개체인스턴스란, 개체를 구성하는 각 속성들이 값을 가지고 하나의 Entity(개체)를 나타내는 것이다.
   
- 예를 들면,  
- Entity(개체) - 주택  
- Attribute(속성) - Entity(개체)의 특성으로, 위에서 개체가 주택이니, 개체의 특성은 주소, 양식, 가격 등이 Attribute(속성) 값이 될 수있다.  
- Value(값) - Attribute(속성)의 값으로, 주택 객체의 양식 값은 '아파트' 가 될 수 있다.  
-   
-   
+* 관계(Realationship)    
+  - 개체간의 관계 or 속성간의 관계이다.
+  - 종류
+    + 1:1 관계 : 집합 A의 모든 원소가 집합 B의 각각 한 원소에 대응.
+    + 1:N 관계 : 집합 A의 어떤 원소는 집합 B의 여러 원소의 대응하지만, 집합 B의 원소는 집합A의 1개의 원소에만 대응. 
+    + N:M 관계 : 집합 A의 원소는 집합 B의 여러 원소에 대응하고, 집합 B도 마찬가지로 집합 A의 여러원소에 대응하는 관계.
