--- a/정규화.md
+++ b/정규화.md
@@ -10,5 +10,38 @@
   - Attribute들의 관계에 대한 제약 조건.
   - 표현은 <code>X -> Y</code>로 하고, 의미는 X가 Y를 함수적으로 결정한다는 뜻.(Y가 X에 함수적으로 종속되어 있다.)  
     여기서 Y를 결정하는 X는 결정자라 하고, Y는 종속자 라고한다.
-  - ex)
+  - ex)  
     
+     <img width="606" alt="스크린샷 2019-03-21 오후 4 12 57" src="https://user-images.githubusercontent.com/21151247/54737691-84956f00-4bf4-11e9-90b4-bd78cad6ed72.png">  
+
+       위 표에서, 학번에 의해서 이름과 학부가 결정된다. 따라서 학부 속성은 학번에 함수적으로 종속되어있다고 할 수 있다.  
+       이 때, <code>학번 -> {학생이름, 학부}</code>로 표현할 수 있다.
+
+    
+       <img width="609" alt="스크린샷 2019-03-21 오후 4 14 26" src="https://user-images.githubusercontent.com/21151247/54737699-8828f600-4bf4-11e9-9df3-821d022f05ae.png">  
+       
+      위 표에서는 학번->이름, {학번,과목코드}-> 학점, {학번,코드}->이름 의 함수적 종속성들을 찾을 수 있다.
+    
+* **부분 함수적 종속**
+  - 속성집합 Y가 속성집합 X의 전체가 아닌 일부분에도 함수적으로 종속됨.  
+    ex) 위에서 두번째 표에서,  {이름}은 {학번,과목코드}에도 함수적으로 종속이고, 일부인 {학번}에도 종속한다.  
+        이 때, {이름}은 {학번,과목코드}에 부분 함수적 종속된다고 할 수 있다.
+* **완전 함수적 종속**
+  - 속성집합 Y가 속성집합 X의 전체에 대해서만 함수적으로 종속.  
+    ex) 위에서 두번째 표에서, {성적}은 {학번,과목코드}의 어떤 부분집합에서 함수적으로 종속되어 있지않다.  
+      따라서 {성적}은 {학번,과목코드}에 완전 함수적으로 종속되어 있다고 할 수있다.
+* **정규화 과정**
+  - 1NF(제1정규형) : Relation에 속한 모든 속성의 도메인이 원자값으로만 구성되어 있는 상태.
+  - 2NF(제2정규형) : 1NF를 만족하는 Relation이면서, private key가 아닌 모든 속성이 Private key에 완전 함수 종속인 상태.
+  - 3NF(제3정규형) : 2NF를 만족하는 Relation이면서, private key가 아닌 모든 속성이 Private key에 이행적 함수 종속이 아닌 상태.
+    + 이행적 함수 종속 : 삼단논법과 비슷하다. X->Y, Y->Z 인 상태는 결국 X->Z가 되는데 이럴떄, Z는 X에 이행적으로 종속되어 있다고 한다.  
+      이 때는, 테이블을 |X,Y| |Y|Z|로 분리해주면 된다.  
+      ex) 학번 -> 학부, 학부->등록금 인 상태에서 학번->등록금 을 유추해낼수 있다.  
+        이것은 논리적으로는 맞는거 같지만, 학번에 따라 등록금이 결정되는 것은 아니기 때문에 이떄는 테이블을 분리해준다.
+  - BCNF(Boyce-Codd 정규형)
+    + 3NF를 만족하는 Relation이면서, 모든 결정자가 후보키인 상태.  
+    + 키가 아닌 모든 속성은 각 키에 완전히 종속되어야 한다.
+    + 어떤 속성도 키가 아닌 값에 종속되지 않는 상태.
+    + ex)  
+      {A,B} -> C,D,E, C->B 인 상태. ==> BCNF에 위반된 상태. 기본키인 {A,B}가 C,D,E를 결정하는데, 다시 C가 B를 결정하고 있음.  
+      이 도 테이블을 분리해주면 된다.
