--- a/트랜잭션.md
+++ b/트랜잭션.md
@@ -15,4 +15,17 @@
     + 트랜잭션이 성공적으로 완료되면, 그 결과는 영구적으로 반영되어야한다.
     
  * 트랜잭션 상태도
- 
+  
+![er-diagram-for-database-management-system-best-of-dbms-quick-guide-of-er-diagram-for-database-management-system](https://user-images.githubusercontent.com/21151247/54742193-080a8c80-4c04-11e9-9d59-efaa7e690edf.png)
+  - Failed(실패) : 트랜잭션 실행에 오류가 발생되어 중단된 상태.
+  - Aborted(철회) : 트랜잭션이 비정상적으로 종료되어 Rollback 연산을 수행한 상태.
+  - Partially Committed(부분 완료) : 트랜잭션의 마지막 연산까지 실행했지만, commit 연산이 실행되기 전의 상태.
+  - Committed(완료) : 트랜잭션이 성공적으로 수행되어 commit된 상태.
+
+
+* 회복 
+  - 손상된 DB를 손상되기 이전의 정상적인 상태로 복구시키는 작업
+* 병행제어
+  - 여러개의 트랜잭션 실행시에 트랜잭션들 간의 독립성을 유지하여 수행에 문제가 없게 제어하는 것.
+* 트리거
+  - 해당 테이블에 어떤 이벤트가 발생하면, 미리 지정한 동작이 연속으로 수행되는 것. 이벤트 직전, 직후 사용 가능.
