--- a/정규화.md
+++ b/정규화.md
@@ -6,6 +6,9 @@
     + 삽입 이상 : 새 데이터를 삽입하기 위해 불필요한 데이터도 함께 삽입해야하는 문제.
     + 갱신 이상 : Relation에서 Tuple에 있는 Attribute값을 갱신할 때, 일부만 갱신되어 정보에 모순이 생기는 현상.
     + 삭제 이상 : 한 Tuple을 삭제할 때, 의도와는 상관없는 값들도 같이 삭제되는 현상.
+* 단점이 있다?!
+  - 테이블을 구조화하면서 분할하기 때문에, 원하는 결과를 얻기 위해 JOIN 연산이 많아질 수 있다. 이로 인해 응답시간이  
+    길어 질 수 있다.
 * 함수적 종속성
   - Attribute들의 관계에 대한 제약 조건.
   - 표현은 <code>X -> Y</code>로 하고, 의미는 X가 Y를 함수적으로 결정한다는 뜻.(Y가 X에 함수적으로 종속되어 있다.)  
