--- a/트랜잭션.md
+++ b/트랜잭션.md
@@ -6,8 +6,7 @@
     + 트랜잭션이 DB에 모두 반영되거나 모두 반영되지 않아야하는 성질. 어느 한 구문이라도 오류가 나면  
       트랜잭션 전부가 취소되어야한다.
   - 일관성(Consistency)
-    + 트랜잭션이 진행되는 동안에 DB가 변경되더라도 갱신된 DB를 바탕으로 진행하는 것이 아닌,  
-      처음에 참조된 DB를 바탕으로 진행해야한다.
+    + 트랜잭션을 완료한 뒤에도 트랜잭션이 일어나기 전의 상태와 동일하게 데이터의 일관성을 보장해야한다.
   - 독립성(Isolation)
     + 둘 이상의 트랜잭션이 동시에 실행되고 있을때, 어느 하나의 트랜잭션이라도 다른 트랜잭션의 연산에 끼어들 수 없다.  
       즉, 수행중인 트랜잭션은 완전히 완료될 떄 까지 다른 트랜잭션에서 수행 결과를 참조할 수 없다.
